SRE Agent running

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "crewai==0.105.0",
     "litellm==1.60.2",
     "pyyaml>=6.0.2",
+    "langfuse>=3.0.0",
 ]
 
 [project.scripts]
